[gd_scene load_steps=4 format=3 uid="uid://17d1cdsasioy"]

[ext_resource type="Script" path="res://Scripts/tree_branch.gd" id="1_akora"]
[ext_resource type="Texture2D" uid="uid://30c7s0afbbvr" path="res://Assets/Tree Branch.png" id="2_6f7j7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xbt8o"]
size = Vector2(76, 10.4116)

[node name="TreeBranch" type="Node2D"]
script = ExtResource("1_akora")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-3, 34)
texture = ExtResource("2_6f7j7")

[node name="HitboxHurtbox" type="Area2D" parent="."]
position = Vector2(5, -5)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxHurtbox"]
position = Vector2(-14.9359, 2.88419)
rotation = 0.118682
shape = SubResource("RectangleShape2D_xbt8o")

[connection signal="area_entered" from="HitboxHurtbox" to="." method="_on_hitbox_area_entered"]
